test/spec/of_string-overflow-u64.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/of_string-overflow-u64.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/of_string-overflow-u64.fail.wast:1:26: invalid literal "18446744073709551616"
(module (func (i64.const 18446744073709551616)))
                         ^^^^^^^^^^^^^^^^^^^^

;;; STDERR ;;)
